# VendorAuditAI

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MIGRATION_GEMINI.md  MIGRATION_SUMMARY.txt  PROJECT_STATUS.md  PROMPT.md  README.md  SECURITY.md  docker-compose.yml  netlify.toml
backend/: .env.example  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_gemini_migration.py
backend/alembic/: env.py
backend/alembic/versions/: 20260112_140500_add_agent_tables.py  20260112_153000_b97fd3b154b0_add_vendor_categorization_columns.py  20260112_170000_add_vendor_risk_scoring_columns.py  20260113_100000_add_playbook_tables.py  20260113_110000_add_ai_classification_tables.py  20260114_100000_add_approved_vendor_tables.py  20260114_110000_add_bpo_tables.py  20260114_120000_add_integration_tables.py  20260114_130000_enhance_remediation_external.py  20260114_140000_add_integration_missing_columns.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  agents.py  ai_classification.py  analysis.py  analytics.py  approved_vendors.py  audit.py  auth.py  bpo.py  categorization.py  compliance.py  dashboard.py  documents.py  export.py  integrations.py  monitoring.py  playbooks.py  (+6 more)
backend/app/core/: __init__.py  security.py
backend/app/data/: __init__.py
backend/app/data/frameworks/: ai_risk.json  caiq.json  cis_controls.json  dora.json  hecvat.json  iso27001.json  nist_ai_rmf.json  nist_csf.json  sig_2026.json  soc2.json
backend/app/data/playbooks/: __init__.py  defaults.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: __init__.py  rate_limit.py
backend/app/models/: __init__.py  agent.py  ai_classification.py  approved_vendor.py  audit_log.py  base.py  bpo.py  chunk.py  document.py  finding.py  integration.py  monitoring.py  organization.py  playbook.py  query.py  remediation.py  sso_config.py  user.py  vendor.py
backend/app/prompts/: __init__.py  compliance_analysis.py  finding_generation.py
backend/app/schemas/: __init__.py  agent.py  ai_classification.py  analytics.py  approved_vendor.py  audit.py  auth.py  bpo.py  categorization.py  chunk.py  compliance.py  document.py  export.py  finding.py  integration.py  monitoring.py  playbook.py  query.py  remediation.py  risk.py  sso.py  vendor.py
backend/app/scripts/: __init__.py  seed_demo_data.py  seed_vendors.py
backend/app/scripts/sample_content/: __init__.py  iso27001.py  pentest.py  sig.py  soc2.py
backend/app/services/: __init__.py  ai_classification.py  analysis.py  analytics.py  approved_vendor.py  audit.py  auth.py  bpo.py  chunking.py  compliance.py  csv_export.py  document.py  embedding.py  excel_export.py  export.py  integration.py  llm.py  parsing.py  playbook.py  processing.py  query.py  remediation.py  risk_scoring.py  search.py  sso.py  storage.py  vendor.py  vendor_categorization.py
backend/app/services/agents/: __init__.py  agent_manager.py
backend/tests/: __init__.py  conftest.py
backend/tests/test_api/: test_compliance.py  test_dashboard.py  test_health.py  test_mfa.py  test_rate_limit.py  test_sso.py
backend/tests/test_services/: test_compliance.py
(+91 files in other folders)
